--- a/src/html/templates/index.html
+++ b/src/html/templates/index.html
@@ -6,30 +6,12 @@
   <div class="wrapper">
     @@include('../layout/header.html')
     <main class="main">
-      <section>
-        <div class="container">
-          <div class="row m--3">
-            <div class="col col-2 p-3">
-              <div class="asd p-10">
-                <h2 class="lol">adsdsas</h2>
-              </div>
-            </div>
-            <div class="col col-4 p-3">
-              <div class="asd p-10">
-                <h2 class="lol">adsdsas</h2>
-              </div>
-            </div>
-            <div class="col col-4 p-3">
-              <div class="asd p-10">
-                <h2 class="lol">adsdsas</h2>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+     
     </main>
     <!-- @@include('../layout/footer.html') -->
-    @@include('../components/popup.html')
+    <div class="svg-sprite">
+        @@include('../components/popup.html')
+    </div>
   </div>
   @@include('../partials/scripts/common.html')
 </body>
