--- a/src/scss/abstracts/variables.scss
+++ b/src/scss/abstracts/variables.scss
@@ -22,7 +22,7 @@ $warning: #FFC117;
 $error: #DC3545;
 
 // Fonts
-$primary-font: 'Font';
+$primary-font: 'Lato';
 $secondary-font: 'Secondary-Font';
 
 // Other
