--- a/src/html/partials/head/head.html
+++ b/src/html/partials/head/head.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global Verst</title>
-    <link media="all" rel="stylesheet" href="assets/fonts/style.css">
+    <!-- <link media="all" rel="stylesheet" href="assets/fonts/stylesheet.css"> -->
     <link media="all" rel="stylesheet" href="assets/css/vendor.min.css">
     <link media="all" rel="stylesheet" href="assets/css/styles.min.css">
 </head>
